fixed: icon in about screen displayed too large
not released

--- a/src/stylesheets/vortex/dialog-about.scss
+++ b/src/stylesheets/vortex/dialog-about.scss
@@ -23,6 +23,11 @@
       padding: 10px;
     }
   }
+
+  .vortex-logo {
+    width: 64px;
+    height: 64px;
+  }
 }
 
 .license-text {
